src/css/styles.css
/* ---
Resets
--- */

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role='list'],
ol[role='list'] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
   scroll-behavior: auto;
  }
  
  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/*---
Custom Styles
---*/

:root {
  --base-color1: 60;
  --base-color2: 340;

  --base-color1-lighter: hsla(var(--base-color1), 50%, 85%, 100%);
  --base-color1-light: hsla(var(--base-color1), 50%, 75%, 100%);
  --base-color1-normal: hsla(var(--base-color1), 50%, 50%, 100%);
  --base-color1-dark: hsla(var(--base-color1), 50%, 35%, 100%);
  --base-color1-darker: hsla(var(--base-color1), 50%, 25%, 100%);

  --base-color2-lighter: hsla(var(--base-color2), 50%,85%, 100%);
  --base-color2-light: hsla(var(--base-color2), 50%, 75%, 100%);
  --base-color2-normal: hsla(var(--base-color2), 50%, 50%, 100%);
  --base-color2-dark: hsla(var(--base-color2), 50%, 35%, 100%);
  --base-color2-darker: hsla(var(--base-color2), 50%, 25%, 100%);
}

body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

p,
li,
h1,
h2,
h3,
h4 {
  overflow-wrap: break-word;
  font-size: clamp(
    var(--fluid-type-min, 1rem),
    calc(1rem + var(--fluid-type-target, 3vw)),
    var(--fluid-type-max, 1.3rem)
  );
}

@supports(hyphens: auto) {
  p,
  li,
  h1,
  h2,
  h3,
  h4 {
    hyphens: auto;
    text-align: justify;
  }
}

h1,
h2,
h3 {
  line-height: 1.1;
}

h1 {
  --fluid-type-min: 1.5rem;
  --fluid-type-max: 3rem;
  --fluid-type-target: 4vw;
}

h2 {
  --fluid-type-min: 1rem;
  --fluid-type-max: 2rem;
}

h3 {
  --fluid-type-min: 0.75rem;
  --fluid-type-max: 1.5rem;
}

p {
  --fluid-type-min: 0.85em;
  --fluid-type-target: 0.5vw;
  --fluid-type-max: 1.25em;
}

a {
  color: var(--base-color1-darker);
}

main {
  margin-top: 3rem;
  margin-bottom: 6rem;
}

.container {
  margin-left: auto;
  margin-right: auto;
  max-width: 100%;
  padding-left: 2rem;
  padding-right: 2rem;
  width: 100ch;
}

.container--narrow {
  width: 65ch;
}

.flow > * {
  margin-top: 1.5em;
}

.flex-wrap  {
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.logo {
  color: var(--base-color1-dark);
  font-size: 1.5rem;
  font-weight: bold;
  line-height: 1.1;
}

.main-header .container > * {
  margin-left: -1rem;
  margin-right: -1rem;
}

.main-header ul {
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0;
}

.main-header .language-nav li > * {
  padding: 0.125rem;
}

.main-header .language-nav li ~ *::before {
  content: "|";
}

.main-header a,
.main-header *.as-a {
  border-width: 0.125rem;
  border-color: transparent;
  border-style: dashed;
  display: inline-block;
  padding: 1rem;
  text-decoration: none;
}

.main-header .language-nav a,
.main-header .language-nav *.as-a {
  border: none;
  text-decoration-color: inherit;
  text-decoration-skip-ink: auto;
}

.main-header .language-nav a:hover {
  text-decoration: underline;
}

.main-header a:hover,
.main-header a:focus,
.main-header a:focus-visible,
.main-header a:focus-within {
  border-color: inherit;
}

.main-header nav.main-nav {
  margin-right: -2rem;
}

.reel {
  display: flex;
  height: auto;
  overflow-x: auto;
  overflow-y: hidden;
  scrollbar-color: #fff #000;
}

.reel::-webkit-scrollbar {
  height: 1rem;
}

.reel::-webkit-scrollbar-track {
  background-color: #000;
}

.reel::-webkit-scrollbar-thumb {
  background-color: #000;
  background-image: linear-gradient(#000 0, #000 0.25rem, #fff 0.25rem, #fff 0.75rem, #000 0.75rem);
}

.reel > * {
  flex: 0 0 auto;
}

.reel > img {
  height: 100%;
  flex-basis: auto;
  width: auto;
}

.reel > * + * {
  margin-left: 1rem;
}

.reel.overflowing {
  padding-bottom: 1rem;
}

